<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" tools:context = ".MainActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTitle"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text="@string/login"
        android:id="@+id/loginScreenTitle"
        android:layout_below="@+id/loginTitle"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/loginScreenTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:autofillHints=""
        android:focusable="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#444"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/loginEmail"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#444"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/loginErrors"
        android:layout_below="@+id/loginPassword"
        android:textColor="#ff0000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:id="@+id/no_account"
        android:layout_below="@+id/loginErrors"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:textSize="35sp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/loginCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>